# azure-document-layout-table-extraction-api

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
